--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>这里是博客内容哦!</h1>
-  <div>嗨朋友</div>
+  <div style="color:#d4fe8a">嗨,我是费小德,很高兴认识你!</div>
+<div style="color:#d4fe8a">Hi, I'm Fiddletick, I'm glad to meet you!</div>
 </body>
 </html>
