--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<h1>这里是博客内容哦!</h1>
   <div style="color:#d4fe8a">嗨,我是费小德,很高兴认识你!</div>
 <div style="color:#d4fe8a">Hi, I'm Fiddletick, I'm glad to meet you!</div>
+	<div style="font-size:50px;color:red">嗨 魏鹏</div>
 </body>
 </html>
